# histextractor

./: README.md  pyproject.toml
histextractor/: __init__.py  main.py  prompts.py
