[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histextractor"
version = "2025.12.21165426"
description = "A new package that extracts and structures key historical facts and insights from textual descriptions of historical events, such as the Lend-Lease program during World War II. The package takes a tex"
readme = "README.md"
authors = [{ name = "histextractor", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/histextractor"
